syntax = "proto3";

option go_package = "github.com/ArtemVoronov/indefinite-studies-utils/pkg/services/subscriptions/subscriptions";

package subscriptions;

service SubscriptionsService {
  rpc PutEvent (PutEventRequest) returns (PutEventReply) {}
  rpc PutSendEmailEvent (PutSendEmailEventRequest) returns (PutSendEmailEventReply) {}
}

message PutEventRequest {
  string eventType = 1;
  string eventBody = 2;
}

message PutEventReply {
}

message PutSendEmailEventRequest {
  string sender = 1;
  string recepient = 2;
  string subject = 3;
  string body = 4;
}

message PutSendEmailEventReply {
}